--- a/pages/index/flex/flex.wxml
+++ b/pages/index/flex/flex.wxml
@@ -1,2 +1,8 @@
 <!--pages/index/flex/flex.wxml-->
-<text>pages/index/flex/flex.wxml</text>
+<view class="flexbox">
+  <view>1</view>
+  <view>2</view>
+  <view>3</view>
+  <view>4</view>
+  <view>5</view>
+</view>
