--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -41,3 +41,38 @@
     <view>全部</view>
   </view>
 </view>
+<!-- 待办事项和办事指南 -->
+<view class="things">
+  <view class="left">
+    <image src="../../imgs/man.png" />
+    <view class="midtitle">
+      <view>待办事项</view>
+      <view>我的待办事项</view>
+    </view>
+  </view>
+  <view class="right">
+    <image src="../../imgs/woman.png" />
+    <view class="midtitle">
+      <view>办事指南</view>
+      <view>办事指南汇总</view>
+    </view>
+  </view>
+</view>
+<!-- 系统上线运行时间 -->
+<view class="runtime flexbox">
+  <view class="flexbox">
+    <image src="../../imgs/audio.svg" />
+  </view>
+  <view>关于系统上线运行的时间</view>
+</view>
+<!-- 办事指南新体验 -->
+<view class="newfeel flexbox">
+  <view>
+    <view>办事指南新体验</view>
+    <view>新增办事指南和消息栏目办事更便捷</view>
+    <view>去了解 →</view>
+  </view>
+  <view>
+    <image src="../../imgs/newfeel.png" mode="aspectFit" />
+  </view>
+</view>
