--- a/pages/myself/myself.wxml
+++ b/pages/myself/myself.wxml
@@ -40,3 +40,118 @@
     </view>
   </view>
 </view>
+<!-- 推荐应用 -->
+<view class="app">
+  <view>
+    <view>推荐应用</view>
+  </view>
+</view>
+<!-- 操作栏 -->
+<view class="operate">
+  <view>
+  <view class="y">
+    <image src="../../imgs/messageimgs/3.png" />
+  </view>
+    <view class="texts">
+      <view>教职工请假申请</view>
+      <view>工作部门：系统维护 请假人：xxx</view>
+    </view>
+    <view>昨天</view>
+  </view>
+  <view>
+  <view class="p">
+    <image src="../../imgs/messageimgs/4.png" />
+  </view>
+    <view class="texts">
+      <view>教职工请假申请</view>
+      <view>工作部门：系统维护 请假人：xxx</view>
+    </view>
+    <view>昨天</view>
+  </view>
+  <view>
+  <view class="g">
+     <image src="../../imgs/messageimgs/5.png" />
+  </view>
+    <view class="texts">
+      <view>教职工请假申请</view>
+      <view>工作部门：系统维护 请假人：xxx</view>
+    </view>
+    <view>昨天</view>
+  </view>
+</view>
+<!-- 我的收藏 -->
+<view class="new">
+  <view class="text">我的收藏</view>
+  <view class="choices flexbox">
+    <view>
+      <image src="../../imgs/appimgs/school.png"/>
+      <view>学校概况</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/map.png"/>
+      <view>学校地图</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/money.png"/>
+      <view>我的消费</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/email.png"/>
+      <view>电子邮件</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/libray.png"/>
+      <view>图书借阅</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/jiangbei.png"/>
+      <view>获奖成果</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/red.png"/>
+      <view>我的党建</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/shenpi.png"/>
+      <view>网上审批</view>
+    </view>
+  </view>
+</view>
+<!-- 我的信息 -->
+<view class="new">
+  <view class="text">我的信息</view>
+  <view class="choices flexbox">
+    <view>
+      <image src="../../imgs/appimgs/school.png"/>
+      <view>教务系统</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/map.png"/>
+      <view>学费缴纳</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/money.png"/>
+      <view>星标课程</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/email.png"/>
+      <view>学生科研</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/libray.png"/>
+      <view>在线选课</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/jiangbei.png"/>
+      <view>专业设置</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/red.png"/>
+      <view>学霸名单</view>
+    </view>
+    <view>
+      <image src="../../imgs/appimgs/shenpi.png"/>
+      <view>学生信息</view>
+    </view>
+  </view>
+</view>
