--- a/pages/duanxin/duanxin.wxml
+++ b/pages/duanxin/duanxin.wxml
@@ -1,2 +1,3 @@
-<!--pages/duanxin/duanxin.wxml-->
-<text>pages/duanxin/duanxin.wxml</text>
+<view class="head">
+<view><image src="../../imgs/左箭头.svg" mode=""/></view>
+</view>
